--- a/estilos.css
+++ b/estilos.css
@@ -109,7 +109,7 @@ select{
     }
     #cantidad{
         margin-top: 40px;
-      
+         width: 55%;
         width: 32%;
         margin-right: 22px;
         text-align: center;
